[project]
name = "complex-transformer"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Alok Singh", email = "alokbeniwal@gmail.com" }
]
dependencies = [
    "ipykernel>=6.29.4",
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "jaxtyping>=0.2.31",
    "torch>=2.3.1",
    "torchvision>=0.18.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/complex_transformer"]
